[tool.poetry]
name = "cytriangle"
version = "0.1.0"
description = "Object-oriented Cython wrapper of Shewchuk's Triangle Library"
authors = ["Maryanne Wachter <mclare@utsv.net>"]
license = "LGPL 3.0"
repository = "https://github.com/m-clare/cytriangle"
readme = "README.md"

[tool.poetry.build]
script = "build_ext.py"
generate-setup-file = true

[tool.poetry.dependencies]
python = ">=3.9"
Cython = "^3.0"
numpy = "^1.25.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core>=1.0.0", "Cython", "setuptools", "numpy"]
build-backend = "poetry.core.masonry.api"
