[tool.poetry]
name = "cytriangle"
version = "1.0.3"
description = "Object-oriented Cython wrapper of Shewchuk's Triangle Library"
authors = ["Maryanne Wachter <mclare@utsv.net>"]
maintainers = [
  "Maryanne Wachter <mclare@utsv.net>",
  "Connor Ferster <connorferster@gmail.com>",
]
license = "LGPL 3.0"
homepage = "https://github.com/m-clare/cytriangle"
repository = "https://github.com/m-clare/cytriangle"
readme = "README.md"
keywords = [
  "finite-element-analysis",
  "triangular-meshing",
  "mesh",
  "FEA",
  "triangle",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
include = ["*.pyx", "*.pxd", "*.c", "src/c/*"]

[tool.cython-lint]
max-line-length = 88
ignore = ['E503', 'E504']

[tool.poetry.build]
script = "build_ext.py"
generate-setup-file = true

[tool.poetry.dependencies]
python = ">=3.9"
numpy = ">=1.25.2"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.2"
black = ">=23.9.1"

[build-system]
requires = ["poetry-core>=1.0.0", "Cython>=3.0", "setuptools", "numpy"]
build-backend = "poetry.core.masonry.api"
