[build-system]
requires = ["setuptools", "Cython>=3.1", "wheel", "numpy>=2.1.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cytriangle"
version = "2.0.1"
description = "Object-oriented Cython wrapper of Shewchuk's Triangle Library"
authors = [{name = "Maryanne Wachter", email = "mclare@utsv.net"}]
maintainers = [
{name = "Maryanne Wachter", email = "mclare@utsv.net"},
{name = "Connor Ferster", email = "connorferster@gmail.com"}
]
license = {text = "LGPL 3.0"}
readme = "README.md"
keywords = [
  "finite-element-analysis",
  "triangular-meshing",
  "mesh",
  "FEA",
  "triangle",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]
requires-python = ">=3.10"
dependencies = ["numpy>=2.1.2"]

[project.optional-dependencies]
dev = [
      "pytest>=7.4.2",
      "black>=23.9.1"
      "cibuildwheel>=2.23.3"
      ]

[tool.cython-lint]
max-line-length = 88
ignore = ['E503', 'E504']

[tool.cibuildwheel]
build-frontend = "build[uv]"
manylinux-x86_64-image = "manylinux2014"
